--- a/View/CurrentUserChange.xaml
+++ b/View/CurrentUserChange.xaml
@@ -5,8 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FitnessWPF.View"
         mc:Ignorable="d"
-        Title="ChoiceUser" Height="500" Width="700" WindowStartupLocation="CenterScreen" WindowStyle="None"
-        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        Title="Авторизация" Height="500" Width="700" WindowStartupLocation="CenterScreen" WindowStyle="SingleBorderWindow"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" 
+        xmlns:viewmodel="clr-namespace:FitnessWPF.ViewModel" d:DataContext="{d:DesignInstance Type=viewmodel:CurentUserChangeViewModel}"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         TextElement.FontWeight="Regular"
         TextElement.FontSize="13"
@@ -22,16 +23,25 @@
             <StackPanel >
                 <WrapPanel HorizontalAlignment="Center">
                     <materialDesign:PackIcon Kind="Account" Height="30" Width="30" />
-                    <TextBlock Text="Выберете пользователя" FontSize="30" FontWeight="Bold" Margin="0 0 0 20 " HorizontalAlignment="Center"/>
+                    <TextBlock Text="Выберите пользователя" FontSize="30" FontWeight="Bold" Margin="0 0 0 20 " HorizontalAlignment="Center"/>
                 </WrapPanel>
-                <Grid Margin="0 0 0 20">
-                    <Button HorizontalAlignment="Left" Content="Войти"/>
-                    <Button HorizontalAlignment="Right"  Content="Новый" Style="{StaticResource MaterialDesignFlatButton}"/>
-                </Grid>
-                <TextBox x:Name="TextBox_Login" Text="{Binding Path=CurentUser.Name}" materialDesign:HintAssist.Hint="Введите логин" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
+                <ListBox x:Name="ListBox_UsersList" ItemsSource="{Binding Path=Users}" SelectedItem="{Binding Path=CurentUser, Mode=TwoWay}" Margin="10" Style="{StaticResource MaterialDesignChoiceChipListBox}">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Path=Name}"></TextBlock>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
+                <TextBox x:Name="TextBlock_Login" Text="{Binding Filtertext, UpdateSourceTrigger=PropertyChanged}" materialDesign:HintAssist.Hint="Введите логин" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
                 <TextBox x:Name="TextBox_Password"  materialDesign:HintAssist.Hint="Введите пароль" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
-                <TextBlock Text="Последние пользователи" FontSize="15" FontWeight="Bold" Margin="0 10 0 5 " HorizontalAlignment="Center"/>
-                <ListBox x:Name="ListBox_UsersList" ItemsSource="{Binding Path=Users}" Margin="10" Style="{StaticResource MaterialDesignChoiceChipListBox}"/>
+                
+                <Grid Margin="0 20 0 20">
+                    <Button Command="{Binding Path=EnterUserCommand}" CommandParameter="{Binding Path=CurentUser}" HorizontalAlignment="Left" Content="Войти"/>
+                    <Button Command="{Binding Path=NewUserCommand}" HorizontalAlignment="Right"  Content="Новый" Style="{StaticResource MaterialDesignFlatButton}"/>
+                </Grid>
+                <!--<TextBlock Text="Последние пользователи" FontSize="15" FontWeight="Bold" Margin="0 10 0 5 " HorizontalAlignment="Center"/>-->
+                
+
             </StackPanel>
         </Border>
     </Grid>
