--- a/View/CreateNewUser.xaml
+++ b/View/CreateNewUser.xaml
@@ -4,8 +4,9 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FitnessWPF.View"
+        xmlns:vm="clr-namespace:FitnessWPF.ViewModel"
         mc:Ignorable="d"
-        Title="ChoiceUser" Height="500" Width="700" WindowStartupLocation="CenterScreen" WindowStyle="None"
+        Title="ChoiceUser" Height="500" Width="700" WindowStartupLocation="CenterScreen" WindowStyle="SingleBorderWindow"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         TextElement.FontWeight="Regular"
@@ -14,6 +15,9 @@
         TextOptions.TextRenderingMode="Auto"
         Background="{DynamicResource MaterialDesignPaper}"
         FontFamily="{DynamicResource MaterialDesignFont}">
+    <Window.DataContext>
+        <vm:CreateNewUserViewModel/>
+    </Window.DataContext>
         
 
     <Grid Background="#ffdadada" Margin="0,0,-36,-37" >
