--- a/View/CurrentUserChange.xaml
+++ b/View/CurrentUserChange.xaml
@@ -7,7 +7,8 @@
         mc:Ignorable="d"
         Title="Авторизация" Height="500" Width="700" WindowStartupLocation="CenterScreen" WindowStyle="SingleBorderWindow"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" 
-        xmlns:viewmodel="clr-namespace:FitnessWPF.ViewModel" d:DataContext="{d:DesignInstance Type=viewmodel:CurentUserChangeViewModel}"
+        xmlns:vm="clr-namespace:FitnessWPF.ViewModel" 
+        d:DataContext="{d:DesignInstance Type=vm:CurentUserChangeViewModel}"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         TextElement.FontWeight="Regular"
         TextElement.FontSize="13"
@@ -15,6 +16,9 @@
         TextOptions.TextRenderingMode="Auto"
         Background="{DynamicResource MaterialDesignPaper}"
         FontFamily="{DynamicResource MaterialDesignFont}">
+    <Window.DataContext>
+        <vm:CurentUserChangeViewModel/>
+    </Window.DataContext>
     <Grid Background="#ffdadada" Margin="0,0,-36,-37" >
         <Border MaxWidth="600" MinHeight="15"  Margin="15" Background="White" VerticalAlignment="Center" Padding="40" CornerRadius="30">
             <Border.Effect >
