--- a/View/MainWindow.xaml
+++ b/View/MainWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FitnessWPF.View"
         xmlns:vm="clr-namespace:FitnessWPF.ViewModel"
+        xmlns:cmd="clr-namespace:FitnessWPF.Infrastructure.Commands"
         mc:Ignorable="d"
         Title="FitnessWPF" Height="450" Width="800"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
@@ -18,6 +19,9 @@
     <Window.DataContext>
         <vm:MainWindowViewModel/>
     </Window.DataContext>
+    <Window.Resources>
+        <cmd:CloseAppCommand x:Key="CloseAppCommand"/>
+    </Window.Resources>
         
 
     <DockPanel x:Name="MainDock" Background="Gray" Margin="10">
@@ -33,7 +37,7 @@
                 <MenuItem Header="User" Click="MenuUser_Click"> 
                 </MenuItem>
                 <Separator />
-                <MenuItem Header="Exit" Click="MenuExit_Click"></MenuItem>
+                <MenuItem Header="Exit" Command="{StaticResource CloseAppCommand}"></MenuItem>
             </MenuItem>
         </Menu>
         <TabControl DockPanel.Dock="Top" >
